[gd_scene format=3 uid="uid://cmijl5w15383c"]

[ext_resource type="Script" uid="uid://bwa161ma76mll" path="res://scripts/day_01.gd" id="1_wckcm"]

[node name="Day01" type="Control" unique_id=1818440826]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wckcm")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1200898565]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1893175413]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=766014114]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header" unique_id=1428588495]
layout_mode = 2
size_flags_horizontal = 3
text = "Day 01"

[node name="ExampleRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=250621147]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Example"

[node name="InputRunButton" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=1644366618]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Input"

[node name="Main" type="Button" parent="MarginContainer/VBoxContainer/Header" unique_id=177059091]
layout_mode = 2
size_flags_horizontal = 3
text = "Main"

[node name="Assignment" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1718603652]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=1346733689]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExPart1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2082823403]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 1"

[node name="ExAnswer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1890518849]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1166056452]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 2"

[node name="ExAnswer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1598608686]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="ExPart3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1712989417]
layout_mode = 2
size_flags_vertical = 1
text = "Example Part 3"

[node name="ExAnswer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=828732137]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part1" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1470493180]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 1"

[node name="Answer1" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=272110629]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part2" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=2086492346]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 2"

[node name="Answer2" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=961420]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Part3" type="Label" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=661882695]
layout_mode = 2
size_flags_vertical = 1
text = "Answer Part 3"

[node name="Answer3" type="LineEdit" parent="MarginContainer/VBoxContainer/Assignment/VBoxContainer" unique_id=1428526787]
layout_mode = 2
text = "0"
placeholder_text = "Answer"
editable = false

[node name="Example" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Assignment" unique_id=1341521576]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=151795024]
layout_mode = 2
text = "Example Input"

[node name="ExampleTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=934071721]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit2" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=183902717]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExampleTextEdit3" type="TextEdit" parent="MarginContainer/VBoxContainer/Assignment/Example" unique_id=656367355]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/ExampleRunButton" to="." method="_on_example_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/InputRunButton" to="." method="_on_input_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/Main" to="." method="_on_main_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit" to="." method="_on_example_text_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit2" to="." method="_on_example_text_edit_text_changed2"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Assignment/Example/ExampleTextEdit3" to="." method="_on_example_text_edit_3_text_changed"]
